--- a/fest_2/fest/templates/kreiva/base.html
+++ b/fest_2/fest/templates/kreiva/base.html
@@ -9,8 +9,8 @@
 <nav class = "navbar navbar-default navbar-static-top">
     <div class="container">
         <ul class="nav navbar-nav">
-            <li><a class="navbar-brand" href="{% url 'index' %}">DJANGO</a></li>
-            <li><a class="navbar-link" href="{% url 'admin:index' %}">ADMIN</a></li>
+            <li><a class="navbar-brand" href="{% url 'index' %}">KREIVA</a></li>
+
             <li><a class="navbar-brand" href="{% url 'kreiva:register' %}">REGISTER</a></li>
             {% if user.is_authenticated %}
                 <li><a class="navbar-brand" href="{% url 'logout'%}">LOGOUT</a></li>
