--- a/fest/templates/kreiva/index.html
+++ b/fest/templates/kreiva/index.html
@@ -2,6 +2,6 @@
 {% extends "kreiva/base.html" %}
    {% block body_block %}
       <div class="jumbotron">
-          <h1>KREIVA</h1>
+          <h1>DJANGO LEVEL 5</h1>
       </div>
    {% endblock %}
