Updated Buttons for events and filter added to display eventlist in dashboard

--- a/fest/templates/kreiva/dashboard.html
+++ b/fest/templates/kreiva/dashboard.html
@@ -3,61 +3,87 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
-<body>
-<h2>DashBoard</h2>
-<form class="choose_form">
-    {% csrf_token %}
-    <div>
-        <input id="user"  type="hidden" name = "user" type="text" value="{{ user.id }}" required>
-        <input id="event" type="hidden" name = "event" type="text" value="ENCORE" required>
-    </div>
-    <input id='update'  type="submit" name = "RYTHEM" class="btn btn-primary btn-block update" >
-</form>
-<!--<table>-->
-              <!--<thead>-->
-              <!--<tr>-->
-                <!--<th>S.No</th>-->
-                <!--<th>User</th>-->
-                <!--<th>Event</th>-->
-              <!--</tr>-->
-              <!--</thead>-->
-              <!--<tfoot>-->
-              <!--{% for user_infos in user_info %}-->
-                <!--<tr>-->
-                  <!--<th>{{ forloop.counter }}</th>-->
-                  <!--<th>{{ user_infos.user.name}}</th>-->
-                  <!--<th>{{ user_infos.event }}</th>-->
-                <!--</tr>-->
-              <!--{% endfor %}-->
-              <!--</tfoot>-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-              <!--</tbody>-->
-            </table>
-<script>
-    $(document).ready(function () {
-        $("#update").click(function (e) {
-            e.preventDefault();
-            var crf_token = $('[name="csrfmiddlewaretoken"]').attr('value');
-            console.log("CSRF TOKEN", crf_token);
-            $.ajax({
-                url: '/kreiva/userinfo/',
-                type: 'POST',
-                dataType: "json",
-                headers: {"X-CSRFToken": crf_token},
-                data: $('.choose_form').serialize(),
-                success: function (reply) {
-                    if (reply.status) {
-                        alert("successfully");
-                    } else {
-                        alert(reply.msg);
-                    }
-                },
-                error: function (xhr) {
-                    alert(xhr.status + ': ' + xhr.responseText);
-                }
-            });
-        });
-    })
-</script>
+<body>
+<!--navabr begins-->
+<nav class = "navbar navbar-default navbar-static-top">
+    <div class="container">
+        <ul class="nav navbar-nav">
+            <li><a class="navbar-brand" href="{% url 'index' %}">DJANGO</a></li>
+            <!--<li><a class="navbar-link" href="{% url 'admin:index' %}">ADMIN</a></li>-->
+
+            <!--<li><a class="navbar-brand" href="{% url 'kreiva:register' %}">REGISTER</a></li>-->
+            {% if user.is_authenticated %}
+                <li><a class="navbar-brand" href="{% url 'logout'%}">LOGOUT</a></li>
+                <li><a class="navbar-brand" href="{% url 'kreiva:dashboard' %}">MY DASHBOARD</a></li>
+            {% else %}
+                <li><a class="navbar-brand" href="{% url 'kreiva:user_login' %}">LOGIN</a></li>
+            {% endif %}
+
+
+        </ul>
+    </div>
+</nav>
+
+<div class="jumbotron">
+    <div class="row">
+        <div class="col-md-6">
+            <img width='100px' height='100px' src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="">
+        </div>
+        <div class="col-md-9">
+            <h2>Welcome to the Dashboard,{{user.username}}</h2>
+        </div>
+
+        </div>
+        <!--<h2>{{user.username}}</h2>-->
+    <h3>Event details:</h3>
+
+<ol>
+    {% for eve in events %}
+
+
+    <!--<p>Name:{{eve.user}}</p>-->
+    <li><p> {{ eve.event}}</p></li>
+
+    {% endfor %}
+</ol>
+
+    </div>
+<br>
+<br>
+<h2>Recommended Events:</h2>
+    <!--{% for i in takenpart %}-->
+    <!--{% for eve in events %}-->
+    <!--{% if i not in eve.events %}-->
+       <!--<p>{{i}}</p>-->
+    <!--{% endif %}-->
+    <!--{% endfor%}-->
+    <!--{% endfor%}-->
+
+{{taken_part}}
+
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
