--- a/fest/templates/kreiva/login.html
+++ b/fest/templates/kreiva/login.html
@@ -1,6 +1,30 @@
 <!DOCTYPE html>
-{% extends "kreiva/base.html" %}
-   {% block body_block %}
+<html>
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<body>
+<!--navabr begins-->
+<nav class = "navbar navbar-default navbar-static-top">
+    <div class="container">
+        <ul class="nav navbar-nav">
+            <li><a class="navbar-brand" href="{% url 'index' %}">DJANGO</a></li>
+            <li><a class="navbar-link" href="{% url 'admin:index' %}">ADMIN</a></li>
+
+            <!--<li><a class="navbar-brand" href="{% url 'kreiva:register' %}">REGISTER</a></li>-->
+            {% if user.is_authenticated %}
+                <li><a class="navbar-brand" href="{% url 'logout'%}">LOGOUT</a></li>
+                <li><a class="navbar-brand" href="{% url 'kreiva:dashboard' %}">MY DASHBOARD</a></li>
+            {% else %}
+                <!--<li><a class="navbar-brand" href="{% url 'kreiva:user_login' %}">LOGIN</a></li>-->
+            {% endif %}
+
+
+        </ul>
+    </div>
+</nav>
       <div class="jumbotron">
           <h1>Please LoginIn:</h1>
           <form action="{% url 'kreiva:user_login' %}" method="post">
@@ -12,4 +36,6 @@
               <input type="submit" value="Login" name="">
           </form>
       </div>
-   {% endblock %}
+
+</body>
+</html>
