--- a/fest/templates/kreiva/base.html
+++ b/fest/templates/kreiva/base.html
@@ -10,10 +10,12 @@
     <div class="container">
         <ul class="nav navbar-nav">
             <li><a class="navbar-brand" href="{% url 'index' %}">DJANGO</a></li>
-            <li><a class="navbar-link" href="{% url 'admin:index' %}">ADMIN</a></li>
+            <!--<li><a class="navbar-link" href="{% url 'admin:index' %}">ADMIN</a></li>-->
             <li><a class="navbar-brand" href="{% url 'kreiva:register' %}">REGISTER</a></li>
             {% if user.is_authenticated %}
                 <li><a class="navbar-brand" href="{% url 'logout'%}">LOGOUT</a></li>
+                <li><a class="navbar-brand" href="{% url 'kreiva:dashboard' %}">MY DASHBOARD</a></li>
+
             {% else %}
                 <li><a class="navbar-brand" href="{% url 'kreiva:user_login' %}">LOGIN</a></li>
             {% endif %}
